Upgrade to java 22